{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 63,
  "lineage": "5bc3092d-6d18-2877-4cc6-e69f7a57cfdf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.228.30.172",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-12-03T13:47:39.789-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/sky2100eksamen24/regions/europe-north1/addresses/static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sky2100eksamen24",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/regions/europe-north1/addresses/static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/zones/europe-north1-a/instances/vm"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/zones/europe-north1-a/instanceGroups/single-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-12-04T09:43:33.364-08:00",
            "description": "Backend service",
            "enable_cdn": false,
            "fingerprint": "wyKbPuyn7qk=",
            "generated_id": 3301228165950417450,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/healthChecks/https-health-check"
            ],
            "id": "projects/sky2100eksamen24/global/backendServices/backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend",
            "port_name": "http",
            "project": "sky2100eksamen24",
            "protocol": "HTTPS",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/securityPolicies/cloud-armor",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/backendServices/backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group.instance_group",
            "google_compute_security_policy.cloud_armor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-03T13:47:51.359-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sky2100eksamen24/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/networks/vpc-network",
            "priority": 1000,
            "project": "sky2100eksamen24",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sky2100eksamen24/global/forwardingRules/forwarding-rule",
            "ip_address": "34.8.127.126",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "forwarding-rule",
            "port_range": "443-443",
            "project": "sky2100eksamen24",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/forwardingRules/forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/targetHttpsProxies/https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group.instance_group",
            "google_compute_security_policy.cloud_armor",
            "google_compute_ssl_certificate.ssl_certificate",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20241115",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/zones/europe-north1-a/disks/vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-03T13:48:16.648-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sky2100eksamen24/zones/europe-north1-a/instances/vm",
            "instance_id": "1073418845577986672",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "-twh_Zzxb9o=",
            "metadata_startup_script": "apt-get update\napt-get install -y nginx\nsystemctl start nginx\n",
            "name": "vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.30.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/networks/vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/regions/europe-north1/subnetworks/initial-subnet",
                "subnetwork_project": "sky2100eksamen24"
              }
            ],
            "project": "sky2100eksamen24",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/zones/europe-north1-a/instances/vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.initial_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sky2100eksamen24/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4669447048140079764",
            "project": "sky2100eksamen24",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "cloud_armor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud armour policy as web Application firewall",
            "fingerprint": "3v9pviMJ7tY=",
            "id": "projects/sky2100eksamen24/global/securityPolicies/cloud-armor",
            "name": "cloud-armor",
            "project": "sky2100eksamen24",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "0.0.0.0/0"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/securityPolicies/cloud-armor",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "initial_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-03T13:47:52.427-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/sky2100eksamen24/regions/europe-north1/subnetworks/initial-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 1,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "initial-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sky2100eksamen24",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/regions/europe-north1/subnetworks/initial-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-04T09:44:28.059-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/sky2100eksamen24/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "sky2100eksamen24",
            "proxy_bind": false,
            "proxy_id": 4912316994780211731,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/sslCertificates/self-managed-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group.instance_group",
            "google_compute_security_policy.cloud_armor",
            "google_compute_ssl_certificate.ssl_certificate",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-04T09:44:16.392-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/backendServices/backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "vNV3CKKr2ks=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sky2100eksamen24/global/urlMaps/url-map",
            "map_id": 172867214104144415,
            "name": "url-map",
            "path_matcher": [],
            "project": "sky2100eksamen24",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sky2100eksamen24/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group.instance_group",
            "google_compute_security_policy.cloud_armor"
          ]
        }
      ]
    }
  ]
}